--- a/style.css
+++ b/style.css
@@ -1,7 +1,14 @@
-header{
+.cabecalho {
     background-color: #424E61;
     color: white;
+    display: flex;
+    flex-direction: row;
 }
-.cabecalho-imagem{
-width: 20%;
+
+.cabecalho-imagem {
+    width: 20%;
+}
+.cabecalho-lista{
+    display: flex;
+    flex-direction: row;
 }
