--- a/style.css
+++ b/style.css
@@ -4,18 +4,29 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    margin:  24px 0;
+    margin: 24px 0;
 }
 
 .cabecalho-imagem {
     width: 20%;
 }
-.cabecalho-lista-item{
+
+.cabecalho-lista-item {
     display: inline-block;
     margin: 0 16px;
 }
 
-.escola-div-conteudo{
-width: 35%;
+.escola-imagem {
+    width: 25%;
+}
 
+.escola {
+    background-image: linear-gradient(#424E61, #4EBFE9);
+    color: white;
+    display: flex;
+    justify-content: center;
+}
+
+.escola-div-conteudo {
+    width: 35%;
 }
