--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
+*{
+    margin: 0;
+    padding: 0;
+}
 .cabecalho {
     background-color: #424E61;
     color: white;
     display: flex;
-    flex-direction: row;
     justify-content: space-around;
+    align-items: center;
     margin: 24px 0;
 }
 
