--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    margin: 24px 0;
+    padding: 24px 0;
 }
 
 .cabecalho-imagem {
@@ -18,6 +18,7 @@
 .cabecalho-lista-item {
     display: inline-block;
     margin: 0 16px;
+    font-size: 24px;
 }
 
 .escola-imagem {
