--- a/style.css
+++ b/style.css
@@ -55,11 +55,13 @@ body {
     text-align: center;
 }
 
-.estudante-titulo{
+.estudante-titulo {
     text-align: center;
     padding: 50px 0;
 }
-.estudantes-todos{
-display: grid;
+
+.estudantes-todos {
+    display: grid;
+    grid-template-columns: 20% 20% 20% 20% 20%;
 
 }
